# stx-docs

./: .gitignore  .gitreview  .zuul.yaml  README.rst  _utils.sh  bindep.txt  dirtyCheck.sh  dup-abbr-check.sh  get-remote-files.sh  hide-empty-rows.sh  htmlChecks.sh  hw-updates.sh  new-topic.sh  normalize-includes.sh  parser.py  pickCompare.sh  setup.cfg  tox.ini
api-ref/source/: api-ref-image-v2-cgcs-ext.rst  conf.py  index.rst
doc/: requirements.txt  setup.cfg  upper-constraints.txt
doc/source/: _this.txt  conf.py  index.rst  spelling_wordlist.txt
doc/source/_includes/: about-host-memory-provisioning.rest  aio_duplex_install_kubernetes.rest  allocating-host-memory-using-horizon.rest  allocating-host-memory-using-the-cli.rest  ansible_install_time_only.txt  application-commands-and-helm-overrides.rest  avs-note.rest  bootstrapping-and-deploying-starlingx.rest  cert-mgmt-ipv6-address-limitation-1a4504370674.rest  common-openstack-labels.rest  configure-remote-clis-and-clients.rest  controller-disk-configurations-for-all-in-one-systems.rest  cve-maintenance-0eaf7f8697bc.rest  deb-tech-preview.rest  distributed-upgrade-orchestration-process-using-the-cli.rest  docker-proxy-config.rest  dynamic-vxlan.rest  (+74 more)
resources/: StarlingX_Docs_Gerrit_Training_17Nov21.pptx  StarlingX_Onboarding_Deck_February_2020.pptx  StarlingX_Onboarding_Deck_for_Web.pptx  StarlingX_Onboarding_Deck_for_Web_October_2020.pptx  StarlingX_Onboarding_Deck_for_Web_September_2020.pptx  index-resources-684d91bce8c2.rst
templates/: alarms_template.rst  events.sh  logs_template.rst  topic-templates.txt
(+1714 files in other folders)
