[metadata]
summary = StarlingX Documentation
name = docs
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://starlingx.io
classifier =
Environment :: OpenStack
Intended Audience :: Information Technology
License :: OSI Approved :: Apache Software License
Operating System :: POSIX :: Linux
Topic :: Documentation
