[metadata]
summary = StarlingX Documentation
name = docs
author = StarlingX
author_email = starlingx-discuss@lists.starlingx.io
home_page = https://starlingx.io
classifier =
Environment :: OpenStack
Intended Audience :: Information Technology
License :: OSI Approved :: Apache Software License
Operating System :: POSIX :: Linux
Topic :: Documentation
